# Image_Comparator

./: CMakeLists.txt  CompareImage.cpp  CompareImage.h  CompareImageThreaded.cpp  CompareImageThreaded.sln  CompareImageThreaded.vcxproj  CompareImageThreaded.vcxproj.filters  ImageComaparator.sln  Image_Comparator.rc  Image_Comparator.sln  Image_Comparator.vcxproj  Image_Comparator.vcxproj.filters  LICENSE  README.md  resource.h
project/: Comparator.vcxproj  Comparator.vcxproj.filters
x64/Debug/: Image_Comparator.ilk  Image_Comparator.vcxproj.FileListAbsolute.txt  vc142.idb
